# uu-tool

./: CRUSH.md  PY-MON_FIXES_AND_INSIGHTS.md  README.md  abstract_insights.md  commands.txt  install-from-git.sh  install-uu-global.sh  install.sh  new_version.md  plan.md  pyproject.toml  setup-git-package.sh  setup-package.sh  uu  uu-git-wrapper  uu-remote
clean-test/: .gitignore  Makefile  README.md  main.py  pyproject.toml  uupm-init.sh  worker.py
lib/uu/: args.sh  common.sh  fs.sh  project.sh
ss-test/: Makefile  README.md  main.py  pyproject.toml
test-workspace/: main.py  pyproject.toml
tools/: run-uu-fixture-tests.sh  uu-validate-makefile.sh
uu_playground.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
